# StandardProject_CCXX

./: .gitignore  CMakeLists.txt  Copyright.txt  ProjectConfig.cfg  README.md  ReadMe.txt  Readme.txt  Test.txt  UserConfig.cfg
Codebase/: CMakeLists.txt
Codebase/Include/StandardProject/DummyModule1/: DummyModule1.h
Codebase/Include/StandardProject/DummyModule2/: DummyModule2.h
Codebase/Include/StandardProject/DummyModule3/: DummyModule3.h
Codebase/Source/: Main.c
Codebase/Source/DummyModule1/: CMakeLists.txt  DummyModule1.c
Codebase/Source/DummyModule2/: CMakeLists.txt  DummyModule2.c
Codebase/Source/DummyModule3/: CMakeLists.txt  DummyModule3.c
Codebase/inc/test/module_1/: module_1.h
Codebase/inc/test/module_2/: module_2.h
Codebase/inc/test/module_3/: module_3.h
Codebase/src/main/: CMakeLists.txt  main.c  main_internal.c  main_internal.h
Codebase/src/module_1/: CMakeLists.txt  module_1.c  module_1_internal.c  module_1_internal.h
Codebase/src/module_2/: CMakeLists.txt  module_2.c  module_2_internal.c  module_2_internal.h
Codebase/src/module_3/: CMakeLists.txt  module_3.c  module_3_internal.c  module_3_internal.h
Diagram/: Overview.dot  Overview.dot.LibDummyModule1.dependers  Overview.dot.StandardProject_exe  StandardProject_dia.dot  StandardProject_dia.dot.DummyModule1.dependers  StandardProject_dia.dot.DummyModule2.dependers  StandardProject_dia.dot.StandardProject_exe
Install/Debug/Include/StandardProject/DummyModule1/: DummyModule1.h
Script/Win/: Build.bat  Clean.bat  Install.bat  Run.bat
Script/Win/Mingw64/: Build.bat  Gen.bat  README.txt  Run.bat
Toolchain/: Mingw64.cmake  Template.cmake
devscript/: build_debug.bat  build_release.bat  clean.bat
