# =======================================================================================
# CMAKE CONFIGURATIONS
# =======================================================================================
cmake_minimum_required(VERSION 3.29)
project(test)
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)

# =======================================================================================
# SUB-DIRECTORIES
# =======================================================================================
add_subdirectory(Codebase)
